feat(inspircd): Update comments and clean up config files

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -1,6 +1,6 @@
 #inspircd -- UTF-8 --INSPIRCD 
-# 这只是一个或多或少可以使用的配置文件示例 
-# 它可能需要根据您的需求进行调整
+# # confv2407231350 txtv07231350 servicev4.1.0 
+# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
@@ -8,7 +8,6 @@
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
-# CFv2407231126 TXv07231345 SEv4.1.0 
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
