--- a/ARKFUTURE/CONF/inspircd/AFEBOT.conf
+++ b/ARKFUTURE/CONF/inspircd/AFEBOT.conf
@@ -1007,68 +1007,86 @@ supybot.replies.databaseRecord: $Type #$id: $text (added by $username at $at)
 # 确定机器人想要模糊时给出的错误消息
 # 
 ###
-supybot.replies.error: 发生错误并已记录\
-                       请与此机器人的管理员联系以获取更多信息.
+supybot.replies.error: An error has occurred and has been logged. Please\
+                       contact this bot's administrator for more\
+                       information. 
 
 ###
 # 确定机器人想要模糊时向所有者提供的错误消息
 # 
 ###
-supybot.replies.errorOwner: 发生错误并已记录 查看日志以获取更多信息.
+supybot.replies.errorOwner: An error has occurred and has been logged. Check\
+                            the logs for more information.
                             
 
 ###
 # 确定当机器人告诉某人他们无法使用他们试图使用的命令时 
 #
 ###
-supybot.replies.genericNoCapability: 你缺少了一些权限来执行命令或缺少相应的参数.
+supybot.replies.genericNoCapability: You're missing some capability you\
+                                     need. This could be because you\
+                                     actually possess the anti-capability\
+                                     for the capability that's required of\
+                                     you, or because the channel provides\
+                                     that anti-capability by default, or\
+                                     because the global capabilities include\
+                                     that anti-capability. Or, it could be\
+                                     because the channel or\
+                                     supybot.capabilities.default is set to\
+                                     False, meaning that no commands are\
+                                     allowed unless explicitly in your\
+                                     capabilities. Either way, you can't do\
+                                     what you want to do.
 
 ###
 # 确定当有人试图使用一个需要被识别或有密码的命令 但这两个凭据都不正确时 机器人会回复什么消息
 #
 ###
-supybot.replies.incorrectAuthentication: 主机掩码不匹配或密码错误.
+supybot.replies.incorrectAuthentication: Your hostmask doesn't match or your\
+                                         password is wrong.
 
 ###
 # 确定当机器人告诉某人他们不够酷来使用他们试图使用的命令时 会给出什么错误消息
 # 
 ###
-supybot.replies.noCapability: 你没有 %s 的功能 \ 
-                              如果你认为你应该有这个能力 在再次尝试之前 请确保您已被识别 \
-                              使用'whoami'命令可以告诉你是否已被识别 或者您可以联系管理员.
+supybot.replies.noCapability: You don't have the %s capability. If you think\
+                              that you should have this capability, be sure\
+                              that you are identified before trying again.\
+                              The 'whoami' command can tell you if you're\
+                              identified.
 
 ###
 # 确定当有人试图访问机器人不知道的用户信息时,机器人会回复什么错误消息
 # 
 ###
-supybot.replies.noUser: 我在用户数据库中找不到 %s \
-                        如果你没给我用户名, \
-                        那么我可能不知道你的用户是谁, \
-                        在此命令生效之前 您需要进行识别.
+supybot.replies.noUser: I can't find %s in my user database. If you didn't\
+                        give a user name, then I might not know what your\
+                        user is, and you'll need to identify before this\
+                        command might work.
 
 ###
 # 确定当有人试图做一些要求他们注册但他们目前未被识别的事情时 机器人会回复什么错误信息
 #
 ###
-supybot.replies.notRegistered: 该命令需要注册用户才能使用.\
-                               如果您已经注册,\
-                               你必须提供证明 (使用 identify 命令)\
-                               或者添加与当前匹配的主机掩码\
-                               主机掩码 (使用 "hostmask add" 命令).
+supybot.replies.notRegistered: You must be registered to use this command.\
+                               If you are already registered, you must\
+                               either identify (using the identify command)\
+                               or add a hostmask matching your current\
+                               hostmask (using the "hostmask add" command).
 
 ###
 # 确定机器人认为您遇到了开发人员不知道的bug时发送什么消息
 # 
 ###
-supybot.replies.possibleBug: 这可能是一个bug. 如果你认为是的话, \
-                             请提交错误报告\
+supybot.replies.possibleBug: This may be a bug. If you think it is, please\
+                             file a bug report at\
                              <https://github.com/progval/Limnoria/issues>.
 
 ###
 # 确定机器人向那些试图在一个频道中做应该在私下做的事情的人发送什么错误消息
 # 
 ###
-supybot.replies.requiresPrivacy: 该操作不能在频道中进行
+supybot.replies.requiresPrivacy: That operation cannot be done in a channel.
 
 ###
 # 确定当命令成功时机器人用什么消息进行应答.
