--- a/ARKFUTURE/CONF/inspircd/AFEBOT.conf
+++ b/ARKFUTURE/CONF/inspircd/AFEBOT.conf
@@ -1093,7 +1093,7 @@ supybot.replies.requiresPrivacy: That operation cannot be done in a channel.
 # 如果此配置变量为空, 不会发送成功消息.
 # 
 ###
-supybot.replies.success: 操作成功.
+supybot.replies.success: Success.
 
 ###
 # 确定由bot中的错误引起的错误消息 是显示详细的错误消息(未捕获的异常) 还是显示一般错误消息.
