(feat(inspircd): Update AFEBOT.conf to enable more replies)

--- a/ARKFUTURE/CONF/inspircd/AFEBOT.conf
+++ b/ARKFUTURE/CONF/inspircd/AFEBOT.conf
@@ -1172,7 +1172,7 @@ supybot.reply.maximumLength: 131072
 #
 # Default value: True
 ###
-supybot.reply.mores: False
+supybot.reply.mores: True
 
 ###
 # 确定将立即发送多少个消息 
