--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -1,4 +1,4 @@
-#inspircd -- UTF-8 --INSPIRCD 
+# Inspircd conf ---UTF-8
 # # confv2407231350 txtv07231350 servicev4.1.0 
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
