(feat(inspircd): Update AFEBOT.conf with correct settings for IRC server)

--- a/ARKFUTURE/CONF/inspircd/ircd&serv&bot/AFEBOT.conf
+++ b/ARKFUTURE/CONF/inspircd/ircd&serv&bot/AFEBOT.conf
@@ -1235,14 +1235,14 @@ supybot.reply.whenAddressedBy.nick: True
 #
 # Default value: False
 ###
-supybot.reply.whenAddressedBy.nick.atEnd: False
+supybot.reply.whenAddressedBy.nick.atEnd: True
 
 ###
-# 确定当被处理时, 机器人总是会响应什么额外的缺口 
+# 确定当消息被处理时, 额外的 Nicks 是什么
 #
 # Default value:  
 ###
-supybot.reply.whenAddressedBy.nicks:  
+supybot.reply.whenAddressedBy.nicks:  ABOT
 
 ###
 # 确定在消息开始时机器人将回复哪些字符串
@@ -1253,7 +1253,7 @@ supybot.reply.whenAddressedBy.nicks:
 supybot.reply.whenAddressedBy.strings: @@ ??
 
 ###
-# 确定机器人是否应该尝试回复所有的消息,即使它们没有处理它(通过它的缺口或前缀字符)
+# 确定机器人是否应该尝试回复所有的消息,即使它们没有设置它(通过它的Nick或前缀字符)
 #
 # Default value: False
 ###
