--- a/ARKFUTURE/CONF/minecraft/server.properties
+++ b/ARKFUTURE/CONF/minecraft/server.properties
@@ -33,7 +33,7 @@ max-chained-neighbor-updates=1000000
 max-players=99999999
 max-tick-time=60000
 max-world-size=29999984
-motd=ARKFUTURE
+motd=§2A§4R§5K§6F§7U§6T§5U§4R§3E§2-§5M§5C
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
