--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -167,10 +167,10 @@
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 #此配置参照(基于)官方文档修改,可自行修改
 <security announceinvites="dynamic"
-          customversion="ARKFUTURE-IRC"
+          customversion="ARKFUTURE"
           genericoper="no"
           hidekills=""
-          hideserver="ARKFUTURE-IRC"
+          hideserver="ARKFUTURE"
           hideulinekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
