--- a/ARKFUTURE/CONF/inspircd/conf/ascii.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/ascii.conf
@@ -1,6 +1,7 @@
 # This file contains ASCII codepage rules for use with the codepage module.
 
-<codepage name="ascii">
+<codepage name="ascii"
+          charset="ascii">
 
 <cpchars index="45">                        # -
 <cpchars begin="48"  end="57">              # 01234567899
