(feat(inspircd): Update config file path for IRC server)

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -427,7 +427,7 @@
 
 ######预编译模块加载及所有模块配置
 #<include file="&SSLPath;/ssl.conf"> #SSL模块
-<include file="&ConfPath;/conf.conf"> #配置文件
+<include file="&ConfPath;/modulesconf.conf"> #配置文件
 <include file="&ConfPath;/ascii.conf"> #Codepage编码配置
 
 
