(feat(inspircd): Update channels in AFEBOT.conf and correct link for #lobby, #rtx in IRC server)

--- a/ARKFUTURE/CONF/inspircd/ircd&serv&bot/AFEBOT.conf
+++ b/ARKFUTURE/CONF/inspircd/ircd&serv&bot/AFEBOT.conf
@@ -497,7 +497,7 @@ supybot.networks.ARKFUTURE.certfile:
 #
 # Default value:  
 ###
-supybot.networks.ARKFUTURE.channels: #DWy3Mo #lobby #trade
+supybot.networks.ARKFUTURE.channels: #DWy3Mo #lobby #rtx
 
 ###
 # 确定将使用哪个键(如果有的话)来加入频道
