--- a/ARKFUTURE/inspircd/irssi.conf
+++ b/ARKFUTURE/inspircd/irssi.conf
@@ -1,16 +1,16 @@
 servers = (
-  { address = "irc.esper.net";  chatnet = "EsperNet";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; },
-  { address = "irc.esper.net";  chatnet = "EsperNet";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
+  { address = "IPaddress";  chatnet = "ARKFUTURE";  port = "6667"; use_tls = "no"; tls_verify = "no"; },
+  { address = "irc.libera.chat";  chatnet = "LiberaChat";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
 );
 
 chatnets = {
-  DALnet = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
-  DALnet = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
+  ARKFUTURE = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
+  LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
 };
 
 channels = (
-  { name = "#lobby";     chatnet = "EsperNet";  autojoin = "No"; },
-  { name = "silc";       chatnet = "SILC";      autojoin = "No"; }
+  { name = "#lobby";  chatnet = "ARKFUTURE";  autojoin = "No"; },
+  { name = "#lobby";  chatnet = "LiberaChat";  autojoin = "No"; }
 );
 
 aliases = {
