(feat(inspircd): Update conf files for module configs and motd, include new channel and update IRC links)

--- a/ARKFUTURE/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/inspircd/conf/modulesconf.conf
@@ -27,6 +27,7 @@
            denyrange="">
 <codepage name="ascii"
           charset="ascii">
+<include file="&ConfPath;/ascii.conf">
 <cloak method="account"
        case="upper"
        class=""
