--- a/ARKFUTURE/inspircd/inspircd.conf
+++ b/ARKFUTURE/inspircd/inspircd.conf
@@ -426,9 +426,8 @@
 <module name="xline_db">
 
 ######预编译模块加载及所有模块配置
+<include file="&ConfPath;/modulesconf.conf"> #模块的配置文件
 #<include file="&SSLPath;/ssl.conf"> #SSL模块
-<include file="&ConfPath;/modulesconf.conf"> #配置文件
-<include file="&ConfPath;/ascii.conf"> #Codepage编码配置
 
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
