(feat(arkfuture): Update inspircd config and txt files, adjust IRC settings and motd)

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -31,7 +31,7 @@
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
 
 <server name=""
-        description="ARKFUTURE-IRC"
+        description="ARKFUTURE-NET"
         network="ARKFUTURE"
         id="1AF">
 # ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别ID
@@ -54,26 +54,28 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
-#如果需要为私人的irc,可以设置密码,使用password字段
+#如果需要为私人的irc,可以设置密码,使用password字段和hash字段
 <connect name="Main"
          allow="*"
          commandrate="1000"
          fakelag="yes"
-         globalmax="0"
-         hardsendq="262144"
+         globalmax=""
+         hardsendq="1M"
          limit=""
-         localmax="0"
+         localmax=""
          maxchans=""
          maxconnwarn="no"
          pingfreq="2m"
          recvq="8K"
          resolvehostnames="yes"
          softsendq="8192"
-         threshold="20"
-         timeout="60"
+         threshold="10"
+         timeout="10"
          uniqueusername="no"
          password=""
-         hash="">
+         hash=""
+         motd="motd"
+         modes="+ix">   
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
@@ -250,7 +252,7 @@
      type="*"
      level="normal"
      target="&dir.log;/inspircd.log"
-     flush="1000">
+     flush="200">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
