--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -1,16 +1,22 @@
 servers = (
-  { address = "IPaddress";  chatnet = "ARKFUTURE";  port = "6667"; use_tls = "no"; tls_verify = "no"; },
+  { address = "irc.URL";  chatnet = "ARKFUTURE";  port = "6667"; use_tls = "no"; tls_verify = "no"; },
   { address = "irc.libera.chat";  chatnet = "LiberaChat";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
+  { address = "irc.rizon.net";  chatnet = "Rizon";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
+  { address = "irc.oftc.net";  chatnet = "OFTC";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
 );
 
 chatnets = {
   ARKFUTURE = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
   LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
+  Rizon = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
+  OFTC = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
 };
 
 channels = (
   { name = "#lobby";  chatnet = "ARKFUTURE";  autojoin = "No"; },
   { name = "#lobby";  chatnet = "LiberaChat";  autojoin = "No"; }
+  { name = "#lobby";  chatnet = "Rizon";  autojoin = "No"; }
+  { name = "#lobby";  chatnet = "OFTC";  autojoin = "No"; }
 );
 
 aliases = {
