--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -7,7 +7,7 @@ servers = (
 
 chatnets = {
   ARKFUTURE = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
-  LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
+  LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; sasl_mechanism = "PLAIN"; sasl_username = ""; sasl_password = "";}; 
   Rizon = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
   OFTC = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
 };
@@ -179,9 +179,9 @@ statusbar = {
 
 settings = {
   core = {
-    real_name = "arkfuture";
-    user_name = "arkfuture";
-    nick = "arkfuture";
+    real_name = "";
+    user_name = "";
+    nick = "";
   };
   "fe-common/core" = { theme = ""; };
 };
