--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -1,13 +1,14 @@
 servers = (
-  { address = "irc.URL";  chatnet = "ARKFUTURE";  port = "6667"; use_tls = "no"; tls_verify = "no"; },
-  { address = "irc.libera.chat";  chatnet = "LiberaChat";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
-  { address = "irc.rizon.net";  chatnet = "Rizon";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
-  { address = "irc.oftc.net";  chatnet = "OFTC";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; }
+  { address = "irc.URL";  chatnet = "ARKFUTURE";  port = "6667"; use_tls = "no"; tls_verify = "no"; tls_cert = "";},
+  { address = "irc.libera.chat";  chatnet = "LiberaChat";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; tls_cert = "";},
+  { address = "irc.rizon.net";  chatnet = "Rizon";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; tls_cert = "";},
+  { address = "irc.oftc.net";  chatnet = "OFTC";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; tls_cert = "";},
 );
 
 chatnets = {
   ARKFUTURE = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
   LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; sasl_mechanism = "PLAIN"; sasl_username = ""; sasl_password = "";}; 
+# use cert set :LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; sasl_mechanism = "EXTERNAL"; sasl_username = ""; sasl_password = "";}; 
   Rizon = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
   OFTC = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
 };
