--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -184,5 +184,5 @@ settings = {
     user_name = "";
     nick = "";
   };
-  "fe-common/core" = { theme = ""; };
+  "fe-common/core" = { theme = "default"; };
 };
