--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -7,8 +7,7 @@ servers = (
 
 chatnets = {
   ARKFUTURE = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
-  LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; sasl_mechanism = "PLAIN"; sasl_username = ""; sasl_password = "";}; 
-# use cert set :LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; sasl_mechanism = "EXTERNAL"; sasl_username = ""; sasl_password = "";}; 
+  LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; #sasl_mechanism = "EXTERNAL"; sasl_mechanism = "PLAIN"; sasl_username = ""; sasl_password = "";}; 
   Rizon = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
   OFTC = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
 };
