--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -1,22 +1,75 @@
 servers = (
-  { address = "irc.URL";  chatnet = "ARKFUTURE";  port = "6667"; use_tls = "no"; tls_verify = "no"; tls_cert = "";},
-  { address = "irc.libera.chat";  chatnet = "LiberaChat";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; tls_cert = "";},
-  { address = "irc.rizon.net";  chatnet = "Rizon";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; tls_cert = "";},
-  { address = "irc.oftc.net";  chatnet = "OFTC";  port = "6697"; use_tls = "yes"; tls_verify = "yes"; tls_cert = "";},
+  {
+    address = "irc.URL";
+    chatnet = "ARKFUTURE";
+    port = "6667";
+    use_tls = "no";
+    tls_verify = "no";
+    tls_cert = "";
+  },
+  {
+    address = "irc.libera.chat";
+    chatnet = "LiberaChat";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  },
+  {
+    address = "irc.rizon.net";
+    chatnet = "Rizon";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  },
+  {
+    address = "irc.oftc.net";
+    chatnet = "OFTC";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  }
 );
 
 chatnets = {
-  ARKFUTURE = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; }; 
-  LiberaChat = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; sasl_mechanism = "PLAIN"; sasl_username = ""; sasl_password = "";}; 
-  Rizon = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
-  OFTC = { type = "IRC";  max_kicks = "4";  max_msgs  = "20";  max_whois = "30"; };
+  ARKFUTURE = {
+    type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+  };
+  LiberaChat = {
+    type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+    sasl_mechanism = "PLAIN";
+    sasl_username = "";
+    sasl_password = "";
+  };
+  Rizon = {
+    type = "IRC";
+    autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -OFTC 2500";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+  };
+  OFTC = {
+    type = "IRC";
+    autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -OFTC 2500";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+  };
 };
 
 channels = (
-  { name = "#lobby";  chatnet = "ARKFUTURE";  autojoin = "No"; },
-  { name = "#lobby";  chatnet = "LiberaChat";  autojoin = "No"; }
-  { name = "#lobby";  chatnet = "Rizon";  autojoin = "No"; }
-  { name = "#lobby";  chatnet = "OFTC";  autojoin = "No"; }
+  { name = "#lobby"; chatnet = "ARKFUTURE"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; }
 );
 
 aliases = {
