--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,19 +1,21 @@
-port = 4567
-
-## Enable communication through ipv4 (default: true)
+# 基础配置
 ipv4 = true
-## Enable communication through ipv6 (default: false)
 ipv6 = true
+nat = true
 
+
+#服务配置
 [ntcp2]
 enabled = true
 published = true
 port = 4567
+ntcp2.proxy = socks://127.0.0.1:5554
 
 [ssu2]
 enabled = true
 published = true
 port = 4567
+proxy = socks://127.0.0.1:5554
 
 [http]
 enabled = true
@@ -69,7 +71,7 @@ subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://s
 [reseed]
 verify = true
 urls = https://reseed.i2p-projekt.de/,https://reseed.i2p.xyz/
-proxy = socks5://127.0.0.1:5554
+proxy = socks://127.0.0.1:5554
 
 [nettime]
 enabled = true
