--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -11,7 +11,7 @@ pidfile = i2pd.pid
 enabled = true
 published = true
 port = 4567
-ntcp2.proxy = socks://127.0.0.1:5554
+proxy = socks://127.0.0.1:5554
 
 [ssu2]
 enabled = true
