--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -5,8 +5,14 @@ nat = true
 conf = ./i2pd.conf
 tunconf = ./tunnels.conf
 pidfile = i2pd.pid
+bandwidth = O
 
-#服务配置
+# 日志
+# log = file
+# logfile = ./i2pd.log
+loglevel = none
+
+# 服务配置
 [ntcp2]
 enabled = true
 published = true
