--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -78,7 +78,7 @@ subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://s
 
 [reseed]
 verify = true
-urls = https://reseed.i2p-projekt.de/,https://reseed.i2p.xyz/
+urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://https://www2.mk16.de/,https://i2p.novg.net/
 proxy = socks://127.0.0.1:5554
 
 [nettime]
