--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -4,8 +4,6 @@ ipv6 = true
 nat = true
 conf = ./i2pd.conf
 tunconf = ./tunnels.conf
-pidfile = i2pd.pid
-bandwidth = O
 
 # 日志
 # log = file
@@ -17,13 +15,11 @@ loglevel = none
 enabled = true
 published = true
 port = 4567
-proxy = socks://127.0.0.1:5554
 
 [ssu2]
 enabled = true
 published = true
-port = 4567
-proxy = socks://127.0.0.1:5554
+port = 5678
 
 [http]
 enabled = true
@@ -78,7 +74,7 @@ subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://s
 
 [reseed]
 verify = true
-urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://https://www2.mk16.de/,https://i2p.novg.net/
+urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/
 file = https://reseed.stormycloud.org/i2pseeds.su3
 threshold = 25
 proxy = socks://127.0.0.1:5554
