--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -8,18 +8,20 @@ tunconf = ./tunnels.conf
 # 日志
 # log = file
 # logfile = ./i2pd.log
-loglevel = none
+loglevel = warn
 
 # 服务配置
 [ntcp2]
 enabled = true
 published = true
 port = 4567
+proxy = socks://127.0.0.1:5554
 
 [ssu2]
 enabled = true
 published = true
-port = 5678
+port = 4567
+proxy = socks://127.0.0.1:5554
 
 [http]
 enabled = true
@@ -75,7 +77,7 @@ subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://s
 [reseed]
 verify = true
 urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/
-file = https://reseed.stormycloud.org/i2pseeds.su3
+file = https://arkfuture.github.io/ARKFUTURE/CONFIG/i2pd/i2pseeds.su3
 threshold = 25
 proxy = socks://127.0.0.1:5554
 
