--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -2,8 +2,8 @@
 ipv4 = true
 ipv6 = true
 nat = true
-conf = ./contrib/i2pd.conf
-tunconf = ./contrib/tunnels.conf
+#conf = ./i2pd.conf
+#tunconf = ./tunnels.conf
 
 # 日志
 # log = file
@@ -54,7 +54,9 @@ port = 4447
 enabled = true
 address = 127.0.0.1
 port = 7656
+portudp = 7655
 singlethread = true
+
 
 [bob]
 enabled = true
@@ -77,9 +79,14 @@ subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://s
 [reseed]
 verify = true
 urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net
+yggurls = http://[324:71e:281a:9ed3::ace]:7070/
 proxy = socks://127.0.0.1:5554
 
 [nettime]
 enabled = true
 ntpservers = pool.ntp.org
 ntpsyncinterval = 72
+
+[persist]
+profiles = true
+addressbook = true
