--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -15,13 +15,13 @@ loglevel = warn
 enabled = true
 published = true
 port = 4567
-proxy = socks://127.0.0.1:5554
+#proxy = socks://127.0.0.1:5554
 
 [ssu2]
 enabled = true
 published = true
-port = 4567
-proxy = socks://127.0.0.1:5554
+port = 4568
+#proxy = socks://127.0.0.1:5554
 
 [http]
 enabled = true
