--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -31,12 +31,14 @@ port = 7070
 #auth = true
 #user = i2pd
 #pass = changeme
+hostname = ARKFUTURE
 lang = chinese
 
 [httpproxy]
 enabled = true
 address = 127.0.0.1
 port = 4444
+addresshelper = true
 # keys = http-proxy-keys.dat
 # addresshelper = true
 # outproxy = http://false.i2p
