--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,13 +1,21 @@
-# 基础配置
+## 基础配置(包括Windows和Linux的共同配置)
 ipv4 = true
 ipv6 = true
 nat = true
-#conf = ./i2pd.conf
-#tunconf = ./tunnels.conf
 bandwidth = X
 floodfill = false
 
-# 日志
+## 基础设置-仅在Linux上使用用
+#conf = ./i2pd.conf
+#tunconf = ~/.i2pd/tunnels.conf
+#tunnelsdir = ~/.i2pd/tunnels.d
+#certsdir = ~/.i2pd/certificates
+#pidfile = i2pd.pid
+#daemon = true (解除注释此条为Linux的守护进程模式)
+#family = ARKFUTURE
+#ifname = eth0
+
+## 日志
 # log = file
 # logfile = ./i2pd.log
 loglevel = warn
