--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,21 +1,12 @@
-## 基础配置(包括Windows和Linux的共同配置)
+## 基础配置
 ipv4 = true
 ipv6 = true
 nat = true
 bandwidth = X
 floodfill = false
-
-## 基础设置-仅在Linux上使用用
-#conf = ./i2pd.conf
-#tunconf = ~/.i2pd/tunnels.conf
-#tunnelsdir = ~/.i2pd/tunnels.d
-#certsdir = ~/.i2pd/certificates
-#pidfile = i2pd.pid
-#family = ARKFUTURE
+family = ARKFUTURE
 
 ## 日志
-# log = file
-# logfile = ./i2pd.log
 loglevel = warn
 
 # 服务配置
