--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -2,11 +2,11 @@
 ipv4 = true
 ipv6 = true
 nat = true
-bandwidth = X
 floodfill = false
-family = ARKFUTURE
 
-## 日志
+# 日志
+# log = file
+# logfile = ./i2pd.log
 loglevel = warn
 
 # 服务配置
