--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -30,6 +30,14 @@ servers = (
     use_tls = "yes";
     tls_verify = "yes";
     tls_cert = "";
+  },
+  {
+    address = "127.0.0.1";
+    chatnet = "I2P";
+    port = "6668";
+    use_tls = "no";
+    tls_verify = "no";
+    tls_cert = "";
   }
 );
 
@@ -51,14 +59,22 @@ chatnets = {
   };
   Rizon = {
     type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+    sasl_mechanism = "PLAIN";
+    sasl_username = "";
+    sasl_password = "";
+  };
+  OFTC = {
+    type = "IRC";
     autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -OFTC 2500";
     max_kicks = "4";
     max_msgs = "20";
     max_whois = "30";
   };
-  OFTC = {
+  I2P = {
     type = "IRC";
-    autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -OFTC 2500";
     max_kicks = "4";
     max_msgs = "20";
     max_whois = "30";
@@ -70,6 +86,7 @@ channels = (
   { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; }
+  { name = "#lobby"; chatnet = "I2P"; autojoin = "No"; }
 );
 
 aliases = {
