--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -3,13 +3,11 @@ ipv4 = true
 ipv6 = true
 nat = true
 floodfill = false
-
-# 日志
-# log = file
-# logfile = ./i2pd.log
+ssu = false
+notransit = false
 loglevel = warn
 
-# 服务配置
+## 服务
 [ntcp2]
 enabled = true
 published = true
@@ -26,10 +24,6 @@ port = 4567
 enabled = true
 address = 127.0.0.1
 port = 7070
-#webroot = /
-#auth = true
-#user = i2pd
-#pass = changeme
 hostname = ARKFUTURE
 lang = chinese
 
@@ -38,56 +32,52 @@ enabled = true
 address = 127.0.0.1
 port = 4444
 addresshelper = true
-# keys = http-proxy-keys.dat
-# addresshelper = true
-# outproxy = http://false.i2p
 
 [socksproxy]
 enabled = true
 address = 127.0.0.1
 port = 4447
-# keys = socks-proxy-keys.dat
-# outproxy.enabled = false
-# outproxy = 127.0.0.1
-# outproxyport = 9050
 
 [sam]
 enabled = true
-address = 127.0.0.1
-port = 7656
-portudp = 7655
-singlethread = true
-
+# address = 127.0.0.1
+# port = 7656
 
 [bob]
 enabled = true
-address = 127.0.0.1
-port = 2827
+# address = 127.0.0.1
+# port = 2827
 
 [i2cp]
 enabled = true
-address = 127.0.0.1
-port = 7654
+# address = 127.0.0.1
+# port = 7654
+
+[i2pcontrol]
+enabled = false
+# address = 127.0.0.1
+# port = 7650
+# password = itoopie
 
 [upnp]
 enabled = true
 name = I2Pd
 
-[addressbook]
-defaulturl = http://shx5vqsw7usdaunyzr2qmes2fq37oumybpudrd4jjj4e4vk4uusa.b32.i2p/hosts.txt
-subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt,http://rus.i2p/hosts.txt
-
 [reseed]
 verify = true
 urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/ 
 yggurls = http://[324:71e:281a:9ed3::ace]:7070/
-proxy = socks://127.0.0.1:5554
+proxy = socks://192.168.0.2:5554
+
+[addressbook]
+defaulturl = http://shx5vqsw7usdaunyzr2qmes2fq37oumybpudrd4jjj4e4vk4uusa.b32.i2p/hosts.txt
+subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt,http://rus.i2p/hosts.txt
+
+[persist]
+profiles = true
+addressbook = true
 
 [nettime]
 enabled = true
 ntpservers = pool.ntp.org
 ntpsyncinterval = 72
-
-[persist]
-profiles = true
-addressbook = true
