--- a/ARKFUTURE/CONFIG/inn/inn.conf
+++ b/ARKFUTURE/CONFIG/inn/inn.conf
@@ -20,15 +20,15 @@
 
 # 一般设置
 
-#domain:
+domain:                      localhost
 #innflags:
 mailcmd:                     /usr/lib/news/bin/innmail
 mta:                         "/usr/sbin/sendmail -oi -oem %s"
-pathhost:                    server.example.net
+pathhost:                    news.localhost
 #runasuser:
 #runasgroup:
 #server:
-syntaxchecks:               [ no-laxmid ]
+syntaxchecks:                [ no-laxmid ]
 
 # Feed 配置
 
