--- a/ARKFUTURE/CONFIG/inn/inn.conf
+++ b/ARKFUTURE/CONFIG/inn/inn.conf
@@ -20,11 +20,11 @@
 
 # 一般设置
 
-domain:                      localhost
+domain:                      local
 #innflags:
 mailcmd:                     /usr/lib/news/bin/innmail
 mta:                         "/usr/sbin/sendmail -oi -oem %s"
-pathhost:                    news.localhost
+pathhost:                    news.local
 #runasuser:
 #runasgroup:
 #server:
