--- a/ARKFUTURE/CONFIG/inn/readers.conf
+++ b/ARKFUTURE/CONFIG/inn/readers.conf
@@ -1,23 +1,4 @@
-##  阅读者及权限控制
-##  auth: 认证；access: 访问.
-##  格式:
-##      auth "<name>" {
-##          hosts: "<hostlist>"
-##          auth: "<authprog>"
-##          default: "<identity>"
-##      }
-##      access "<name>" {
-##          users: "<userlist>"
-##          newsgroups: "<newsgroups>"
-##          access: "<perm>"
-##          # Or instead of newsgroups/access:
-##          read: "<read>"
-##          post: "<post>"
-##      }
-##
-## 相关配置文件: https://www.eyrie.org/~eagle/software/inn/docs/readers.conf.html
-
-## 管理员配置
+##  阅读者及权限控制 通过基础运行测试
 auth "admin" {
     hosts: "*"
     auth: "ckpasswd -f /etc/news/db/newsadmin"
@@ -28,9 +9,6 @@ access "admin" {
     newsgroups: "*"
     access: "AILNPR"
 }
-
-## 用户配置
-# 未验证用户
 auth "default" {
     hosts: "*"
     default: "<FAIL>"
@@ -41,7 +19,6 @@ access "default" {
     read: "*,!arkfuture"
     post: "!*"
 }
-# 验证用户
 auth "authenticated" {
     hosts: "*"
     auth: "ckpasswd -f /home/news/db/newsuser"
