--- a/ARKFUTURE/CONFIG/inn/readers.conf
+++ b/ARKFUTURE/CONFIG/inn/readers.conf
@@ -1,4 +1,5 @@
 ##  阅读者及权限控制 通过基础运行测试
+# 管理员
 auth "admin" {
     hosts: "*"
     auth: "ckpasswd -f /etc/news/db/newsadmin"
@@ -9,6 +10,7 @@ access "admin" {
     newsgroups: "*"
     access: "AILNPR"
 }
+# 未认证用户
 auth "default" {
     hosts: "*"
     default: "<FAIL>"
@@ -19,6 +21,7 @@ access "default" {
     read: "*,!arkfuture"
     post: "!*"
 }
+# 认证用户
 auth "authenticated" {
     hosts: "*"
     auth: "ckpasswd -f /home/news/db/newsuser"
