--- a/ARKFUTURE/CONFIG/inn/test bk/inn.conf
+++ b/ARKFUTURE/CONFIG/inn/test bk/inn.conf
@@ -1,4 +1,4 @@
-##  inn.conf -- INN configuration data 通过基础运行测试
+##  inn.conf -- INN configuration data
 ##
 ##  Format:
 ##      <parameter>:<whitespace><value>
