--- a/ARKFUTURE/CONFIG/inn/readers.conf
+++ b/ARKFUTURE/CONFIG/inn/readers.conf
@@ -17,9 +17,8 @@ auth "default" {
 }
 access "default" {
     users: "<FAIL>"
-    newsgroups: "local.*"
-    read: "*,!arkfuture"
-    post: "!*"
+    newsgroups: "*,!arkfuture"
+    access: "R"
 }
 # 认证用户
 auth "authenticated" {
