--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -33,8 +33,8 @@
 <server name=""
         description="ARKFUTURE-NET"
         network="ARKFUTURE"
-        id="1AF">
-# ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别ID
+        id="0AF">
+# ARKFUTURE irc id从0AF开始,依次往后推到9AF
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -46,7 +46,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-#监听器,监听客户端;若使用TLS/SSL,请在.ssl.conf中修改相关配置
+#监听器,监听客户端;若使用TLS/SSL,请在ssl/ssl.conf中修改相关配置
 <bind address=""
       port="6667,6668,6669"
       type="clients">
