--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -71,7 +71,7 @@ channels = (
   { name = "#lobby"; chatnet = "ARKFUTURE"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
-  { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; }
 );
 
 aliases = {
