--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -30,7 +30,16 @@ servers = (
     use_tls = "yes";
     tls_verify = "yes";
     tls_cert = "";
+  },
+    {
+    address = "127.0.0.1";
+    chatnet = "I2P-ilita";
+    port = "6697";
+    use_tls = "no";
+    tls_verify = "no";
+    tls_cert = "";
   }
+
 );
 
 chatnets = {
@@ -65,13 +74,21 @@ chatnets = {
     max_msgs = "20";
     max_whois = "30";
   };
+  I2P-ilita = {
+    type = "IRC";
+    autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -I2P-ilita 2500";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+  };
 };
 
 channels = (
   { name = "#lobby"; chatnet = "ARKFUTURE"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
-  { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; }
+  { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "I2P-ilita"; autojoin = "No"; }
 );
 
 aliases = {
