--- a/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/outherconf/irssi.conf
@@ -31,15 +31,14 @@ servers = (
     tls_verify = "yes";
     tls_cert = "";
   },
-    {
+  {
     address = "127.0.0.1";
-    chatnet = "I2P-ilita";
+    chatnet = "I2P_ilita";
     port = "6697";
     use_tls = "no";
     tls_verify = "no";
     tls_cert = "";
   }
-
 );
 
 chatnets = {
@@ -74,7 +73,7 @@ chatnets = {
     max_msgs = "20";
     max_whois = "30";
   };
-  I2P-ilita = {
+  I2P_ilita = {
     type = "IRC";
     autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -I2P-ilita 2500";
     max_kicks = "4";
@@ -88,7 +87,7 @@ channels = (
   { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; },
-  { name = "#lobby"; chatnet = "I2P-ilita"; autojoin = "No"; }
+  { name = "#lobby"; chatnet = "I2P_ilita"; autojoin = "No"; }
 );
 
 aliases = {
