update inn2 set

--- a/ARKFUTURE/CONFIG/inn/inn.conf
+++ b/ARKFUTURE/CONFIG/inn/inn.conf
@@ -114,9 +114,9 @@ addinjectionpostingaccount:  false
 addinjectionpostinghost:     true
 checkincludedtext:           false
 #complaints:
-#fromhost:
+fromhost:                    news.localhost
 localmaxartsize:             1000000
-#moderatormailer:
+moderatormailer:             2qwn2rrds@mozmail.com
 nnrpdauthsender:             false
 #nnrpdposthost:
 nnrpdpostport:               119
