--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -259,7 +259,7 @@
 # 请阅读https://docs.inspircd.org/4/modules/
 # 官方网站MODULES页面下普通模块
 
-######启用模块
+######模块
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -427,9 +427,25 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######预编译模块加载及所有模块配置
-<include file="&ConfPath;/modulesconf.conf"> #模块的配置文件
-#<include file="&SSLPath;/ssl.conf"> #SSL模块
+######预编译模块(需要在编译时启用并且解除注释后才能使用)
+#<module name="argon2">
+#<module name="geo_maxmind">
+#<module name="ldap">
+#<module name="log_json">
+#<module name="log_syslog">
+#<module name="mysql">
+#<module name="pgsql">
+#<module name="regex_pcre2">
+#<module name="regex_posix">
+#<module name="regex_re2">
+#<module name="sqlite3">
+#<module name="ssl_gnutls">
+#<module name="ssl_openssl">
+#<module name="sslrehashsignal">
+
+######模块的配置文件(请修改为自己的配置或者使用include加载相关模块配置)
+<include file="&ConfPath;/modulesconf.conf"> 
+#<include file="&SSLPath;/ssl.conf"> #SSL模块配置
 
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
